--- a/qootalk-server/build.gradle
+++ b/qootalk-server/build.gradle
@@ -1,29 +1,35 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '4.0.0'
+	id 'org.springframework.boot' version '4.0.0' apply false
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.lrchan'
-version = '0.0.1-SNAPSHOT'
-description = 'QooTalk is a real-time messaging platform that makes internal communication faster, lighter, and more connected.'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+allprojects {
+	group = 'com.lrchan'
+	version = '0.0.1-SNAPSHOT'
+	
+	repositories {
+		mavenCentral()
 	}
 }
 
-repositories {
-	mavenCentral()
-}
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'io.spring.dependency-management'
+	
+	java {
+		toolchain {
+			languageVersion = JavaLanguageVersion.of(21)
+		}
+	}
+	
+	dependencyManagement {
+		imports {
+			mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+		}
+	}
+	
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
 }
