--- a/qootalk-server/settings.gradle
+++ b/qootalk-server/settings.gradle
@@ -1,1 +1,7 @@
 rootProject.name = 'qootalk'
+
+include 'module-domain'
+include 'module-application'
+include 'module-infrastructure'
+include 'module-presentation'
+include 'module-common'
