--- a/qootalk-server/build.gradle
+++ b/qootalk-server/build.gradle
@@ -26,7 +26,16 @@ subprojects {
 	dependencyManagement {
 		imports {
 			mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+			mavenBom 'org.junit:junit-bom:5.11.0'
 		}
+		dependencies {
+			dependency 'org.assertj:assertj-core:3.25.3'
+		}
+	}
+	
+	dependencies {
+		testImplementation 'org.junit.jupiter:junit-jupiter'
+		testImplementation 'org.assertj:assertj-core'
 	}
 	
 	tasks.named('test') {
