--- a/qootalk-server/module-presentation/build.gradle
+++ b/qootalk-server/module-presentation/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// JUnit Platform Launcher는 JUnit BOM에서 버전 관리됨
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
